Fixed: Layout for food summary panel should update after food removed
Fixed: Character Graphic: 180 lbs should look much fatter
Fixed: Fix blinking stroke graphic on the character
Fixed: Rename "fat-free mass" to "Other" or "non-fat" mass, sounds too much like "fat-free" used in foods.
Fixed: Need better carbs pic for bar chart
Fixed: Weight text box needs more columns.
Renamed "activity" to "lifestyle" in the stacked bar chart
Removed confusing "professional athlete" option

0.00.18
Added better behavior for heart/health indicator, based on BMI
Fixed: Constrain slider range: Snap after release
Added graphical icons to bar chart elements
Fixed: -weight in pounds triple numbers readout on gray slider do not fit inside box alloted
Fixed: -dude is too tall (head goes off screen) at 5'9"
Calorie editor dialogs pop up south, to not obscure main area, also is smaller
Added graphs
Added ability to change units between metric and english
Fixed BMR to be a function of FFM, not FFM%
Lightened up intake colors
Added reset all button