@@ -1,3 +1,4 @@
+Added other base options for diet, including "none"
 Fixed: Layout for food summary panel should update after food removed
 Fixed: Character Graphic: 180 lbs should look much fatter
 Fixed: Fix blinking stroke graphic on the character
